# veda-workflow

./: .gitignore  LICENSE  README.md  build.sh
camunda-client/: Cargo.toml
camunda-client/src/apis/: client.rs  execution_api.rs  mod.rs  task_api.rs
ontology/bpmn/: common-execution-handlers.ttl  common-external-task-handlers.ttl  common-user-task-handlers.ttl  simple-task-process-handlers.ttl  simple-task-process-stop.ttl  simple-task-process-test.ttl  simple-task-process.ttl  veda-bpmn-decision-form.ttl  veda-bpmn-external-task-handler.ttl  veda-bpmn-handler.ttl  veda-bpmn-journal.ttl  veda-bpmn-process-control.ttl  veda-bpmn-start-form.ttl  veda-bpmn-status.ttl  veda-bpmn-system-user.ttl  veda-bpmn-task-handler.ttl  veda-bpmn-user-task-event.ttl
ontology/bpmn/templates/: bpmn_ProcessEndedTemplate.html  bpmn_ProcessEndedTemplate.js  bpmn_ProcessStartedTemplate.html  bpmn_ProcessStartedTemplate.js  bpmn_SimpleTaskStartFormTemplate.js  bpmn_TaskCreatedTemplate.html  bpmn_TaskCreatedTemplate.js  bpmn_TaskDeletedTemplate.html  bpmn_TaskDeletedTemplate.js
v-camunda-common/: Cargo.toml
v-camunda-common/src/: lib.rs  scripts.rs
veda-bpmn/: .gitignore  package.json  start-debug.sh  start.sh
veda-bpmn/onto/: veda-bpmn-test.ttl  veda-bpmn.ttl
veda-bpmn/onto/templates/: bpmn_ProcessInstanceTemplate.js  bpmn_ProcessTemplate.js  bpmn_TokenPopoverTemplate.js
veda-bpmn/src/: bpmn.js  camundaExtensions.js  main.js  module.js  options.js  polyfill.js  sendTelegram.js
veda-camunda-connector/: Cargo.toml
veda-camunda-connector/src/: common.rs  decision_form.rs  main.rs  start_form.rs
veda-camunda-connector/test/: simple-task-process.bpmn  universal-task-process.bpmn
veda-camunda-event-handler/: Cargo.toml  doc.txt
veda-camunda-event-handler/src/: common.rs  main.rs
veda-camunda-external-task/: Cargo.toml
veda-camunda-external-task-worker/: Cargo.toml
veda-camunda-external-task-worker/src/: main.rs  v8_script.rs
veda-camunda-external-task/src/: common.rs  main.rs  v8_script.rs
veda-camunda-plugin/: .gitignore  README.md  build.sh  camunda-veda-plugin.properties  pom.xml
veda-camunda-plugin/src/main/java/com/semanticmachines/veda/bpm/: VedaCamundaPlugin.java  VedaDeployListener.java  VedaDeployer.java  VedaExecutionListener.java  VedaParseListener.java  VedaParseListenerPlugin.java  VedaQueueWriter.java  VedaTaskListener.java  VedaUserTaskListener.java
veda-camunda-plugin/src/test/java/org/camunda/bpm/example/test/: BpmnParseListenerOnUserTaskTest.java
veda-camunda-plugin/src/test/resources/: camunda.cfg.xml
veda-camunda-process-controller/: Cargo.toml
veda-camunda-process-controller/src/: common.rs  decision_form.rs  main.rs  start_form.rs  stop_process.rs
veda-camunda-process-controller/test/: elemental-task-process.bpmn  simple-task-process.bpmn  universal-task-process.bpmn
veda-camunda-user-task/: Cargo.toml
veda-camunda-user-task/src/: common.rs  main.rs
veda-nano-bpmn/: Cargo.toml
