[package]
name = "v_camunda_common"
version = "0.1.0"
authors = ["Itiua <ValeriyBushenev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4"
lazy_static = "1.4.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_derive = "1.0"
serde_json = "1.0"

v_queue = "0.1.7"

v_module = { package = "v-common-module", version = "=0.1.42" }
v_ft_xapian = { package = "v-common-ft-xapian", version = "=0.1.45" }
v_v8 = { package = "v-common-v8", version = "=0.1.54" }

camunda_client = { path = "../camunda-client" }
