[package]
name = "veda-camunda-connector"
version = "0.1.0"
authors = ["Itiua <ValeriyBushenev@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
serde_json = "1.0"

v_queue = "0.1"

v_module = { package = "v-common-module", version = "0.1.22" }

camunda_client = { path = "../camunda-client" }
