[package]
name = "veda-camunda-external-task-worker"
version = "0.1.0"
authors = ["Itiua <ValeriyBushenev@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
lazy_static = "1.4.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_derive = "1.0"
serde_json = "1.0"

v_module = { package = "v-common-module", version = "0.1.26" }
v_ft_xapian = { package = "v-common-ft-xapian", version = "0.1.27" }
v_v8 = { package = "v-common-v8", version = "0.1.33" }

camunda_client = { path = "../camunda-client" }
v_camunda_common = { path = "../v-camunda-common" }

