[package]
name = "veda-camunda-external-task-worker"
version = "0.1.0"
authors = ["Itiua <ValeriyBushenev@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
lazy_static = "1.4.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_derive = "1.0"
serde_json = "1.0"
scan_fmt = "0.2.6"

v_queue = "=0.1.9"

#v_v8 = { package = "v-common-v8", path = "../../v-common-v8" }
v_v8 = { package = "v-common-v8", version = "=0.1.70" }

camunda_client = { path = "../camunda-client" }
v_camunda_common = { path = "../v-camunda-common" }

