[package]
name = "veda-camunda-process-controller"
version = "0.1.0"
authors = ["Itiua <ValeriyBushenev@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

v_queue = "=0.1.9"

#v_common = { package = "v-common",  path = "../../v-common" }
v_common = { package = "v-common", version = "=0.1.91" }

camunda_client = { path = "../camunda-client" }
