[package]
name = "veda-nano-bpmn"
version = "0.1.0"
authors = ["Itiua <ValeriyBushenev@gmail.com>"]
edition = "2018"


[dependencies]
log = "0.4"
quick-xml = {version = "0.18.1", features = [ "serialize" ]}
maplit = "1.0.2"
rusty_v8 = "0.14.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_derive = "1.0"
indextree = "4.2.0"
nanoid = "0.3.0"

v_queue = "0.1"
v_onto = { package = "v-common-onto", version = "0.1.1" }
v_api = { package = "v-common-api", version = "0.1.2" }
v_storage = { package = "v-common-storage", version = "0.1.2" }
v_module = { package = "v-common-module", version = "0.1.5" }
v_v8 = { package = "v-common-v8", version = "0.1.3" }

